# thinkingify

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: deploy-ui.yml
api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_create_users.py  0002_create_content.py  0003_add_learner_role.py  0004_create_puzzle_tables.py  0005_create_topics.py  0006_create_notes.py  0007_add_rowling_fields_to_content.py  0008_add_themes_to_topics.py
api/app/: main.py
api/app/api/v1/: auth.py  content.py  puzzles.py  router.py  topics.py  uploads.py
api/app/core/: config.py  database.py  deps.py  security.py  storage.py
api/app/models/: __init__.py  base.py  content.py  note.py  puzzle.py  topic.py  user.py
api/app/schemas/: auth.py  content.py  note.py  puzzle.py  topic.py  user.py
api/app/services/: auth_service.py  content_service.py  note_service.py  puzzle_service.py  topic_service.py
api/tests/: conftest.py  test_auth_service.py  test_content_service.py  test_note_service.py  test_puzzle_service.py  test_topic_service.py
docs/: rowling-room-spec.md
ui/: CLAUDE.md  Dockerfile  README.md  angular.json  package-lock.json  package.json  tailwind.config.js
ui/src/: index.html  styles.css
ui/src/app/: app.component.ts  app.config.ts  app.routes.ts
ui/src/app/core/: api.interceptor.ts  auth.guard.ts  config.ts
ui/src/app/core/models/: content.ts  index.ts  note.ts  puzzle.ts  (+2 more)
ui/src/environments/: environment.prod.ts  environment.ts
ui/src/types/: google-accounts.d.ts
(+65 files in other folders)
