[tool.poetry]
name = "thinkingify-api"
version = "0.1.0"
description = "Thinkingify backend — FastAPI + Supabase Postgres/Storage"
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = { extras = ["email"], version = "^2.0" }
pydantic-settings = "^2.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
alembic = "^1.13"
python-jose = { extras = ["cryptography"], version = "^3.3" }
google-auth = "^2.29"
requests = "^2.32"
supabase = "^2.0"
httpx = "^0.27"
python-multipart = "^0.0.9"
Pillow = "^10.4"
python-slugify = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.6"
aiosqlite = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
